src/objects/Account_BBVA_Information__c.object
<CustomObject>
    <fields>
        <fullName>account_id__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account BBVA Information</relationshipLabel>
        <relationshipName>Account_BBVA_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>average_balance_amount__c</fullName>
        <label>Average balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>current_balance_amount__c</fullName>
        <label>Punctual balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>current_balance_var_day_amount__c</fullName>
        <label>Daily var</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>current_balance_var_month_amount__c</fullName>
        <label>Monthly var</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>current_balance_var_quart_amount__c</fullName>
        <label>Quarterly var</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>current_balance_var_year_amount__c</fullName>
        <label>Annual var</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>product_desc__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_desc_order__c</fullName>
        <formula>IF( type__c =&apos;01&apos;,IF(UPPER( product_group_classification_id__c )=&apos;DIRECTA&apos;,CASE(UPPER( product_desc__c ),&apos;PRÉSTAMO&apos;,1,&apos;COMEX&apos;,2,&apos;LEASING&apos;,3,&apos;DESCUENTO DE LETRAS&apos;,4,&apos;FACTORING&apos;,5,&apos;OTROS&apos;,6,0),CASE(UPPER( product_desc__c ),&apos;FIANZAS&apos;,7,&apos;CARTA CRÉDITO&apos;,8,&apos;OTROS&apos;,9,0)),CASE(UPPER(product_desc__c ),&apos;VISTA&apos;,1,&apos;AHORRO&apos;,2,&apos;PLAZO&apos;,3,&apos;FONDOS MUTUOS&apos;,4,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>product_group_classification_id__c</fullName>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_group_classification_order__c</fullName>
        <formula>IF( type__c =&apos;01&apos;,CASE(UPPER( product_group_classification_id__c ),&apos;DIRECTA&apos;,1,&apos;INDIRECTA&apos;,2,0),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
		<externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>year_month_day_date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <label>Información BBVA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>account_id__c</columns>
        <columns>type__c</columns>
        <columns>year_month_day_date__c</columns>
        <columns>product_group_classification_id__c</columns>
        <columns>product_desc__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ABI-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Información BBVA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>